# jocppqt

CC/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  buildmac.sh
Cadastro/: CMakeLists.txt  Contact.h  ContactInfo.cpp  ContactInfo.h  ContactInfo.ui  MainWindow.cpp  MainWindow.h  main.cpp  mainwindow.ui  mainwindow2.ui
Calculator/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
ClickCounter/: CMakeLists.txt  MainWindow.cpp  MainWindow.ui
HelloWorld/: CMakeLists.txt  buildwin.bat
HelloWorldQt/: CMakeLists.txt  main.cpp
HelloWorldUI/: CMakeLists.txt  main.cpp
